--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.2.1",
+    "react-type-animation": "^3.2.0",
+    "tailwindcss-dropdown": "^1.0.0",
     "tw-elements-react": "^1.0.0-alpha2"
   },
   "devDependencies": {
