--- a/package.json
+++ b/package.json
@@ -15,9 +15,13 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.2.1",
+    "react-router-hash-link": "^2.4.3",
+    "react-scroll-parallax": "^3.4.5",
+    "react-slideshow-image": "^4.3.1",
     "react-type-animation": "^3.2.0",
     "tailwindcss-dropdown": "^1.0.0",
-    "tw-elements-react": "^1.0.0-alpha2"
+    "tw-elements-react": "^1.0.0-alpha2",
+    "typewriter-effect": "^2.21.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
