--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
     "@heroicons/react": "^2.1.3",
     "@material-tailwind/react": "^2.1.9",
     "framer-motion": "^11.2.10",
+    "lenis": "^1.1.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.2.1",
+    "react-router-dom": "^6.23.1",
     "react-router-hash-link": "^2.4.3",
     "react-scroll-parallax": "^3.4.5",
     "react-slideshow-image": "^4.3.1",
